objects/TW1_Achados_e_Perdidos__c.object
<CustomObject>

    <fields>
        <fullName>TW1_Armazenado_em__c</fullName>
        <label>Armazenado em</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Cliente__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.IsPersonAccount</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Achados e Perdidos</relationshipLabel>
        <relationshipName>Achados_e_Perdidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data__c</fullName>
        <label>Data</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_da_Devolucao__c</fullName>
        <label>Data da Devolução</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Data_da_Doacao__c</fullName>
        <label>Data da Doação</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_da_Perda__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Data da Perda</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TW1_Descricao__c</fullName>
        <label>Descrição</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Empresa_Destino__c</fullName>
        <label>Empresa Destino</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Encontrado_em__c</fullName>
        <label>Encontrado em</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Encontrado_por__c</fullName>
        <label>Encontrado por</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_ID_Externo__c</fullName>
        <externalId>true</externalId>
        <label>ID Externo</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Local__c</fullName>
        <label>Local</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Nome_do_Shopping__c</fullName>
        <formula>TW1_Shopping__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nome do Shopping</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Objeto__c</fullName>
        <label>Objeto</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TW1_Observacao__c</fullName>
        <label>Observação</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Achados e Perdidos</relationshipLabel>
        <relationshipName>Achados_e_Perdidos</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Armazenado</fullName>
                </value>
                <value>
                    <fullName>Destruído</fullName>
                </value>
                <value>
                    <fullName>Doado</fullName>
                </value>
                <value>
                    <fullName>Perdido</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Achados e Perdidos</label>
    <listViews>
        <fullName>Achados</fullName>
        <columns>NAME</columns>
        <columns>TW1_Data__c</columns>
        <columns>TW1_Data_da_Perda__c</columns>
        <columns>TW1_Descricao__c</columns>
        <columns>TW1_Local__c</columns>
        <columns>TW1_Objeto__c</columns>
        <columns>TW1_Shopping__c</columns>
        <columns>TW1_Observacao__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TW1_Achados_e_Perdidos__c.Achado</value>
        </filters>
        <label>Achados</label>
    </listViews>
    <listViews>
        <fullName>Doado</fullName>
        <columns>NAME</columns>
        <columns>TW1_Data_da_Doacao__c</columns>
        <columns>TW1_Descricao__c</columns>
        <columns>TW1_Empresa_Destino__c</columns>
        <columns>TW1_Shopping__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TW1_Data_da_Doacao__c</field>
            <operation>greaterOrEqual</operation>
            <value>5/16/2018</value>
        </filters>
        <label>Doado</label>
    </listViews>
    <listViews>
        <fullName>Perdido</fullName>
        <columns>NAME</columns>
        <columns>TW1_Cliente__c</columns>
        <columns>TW1_Data_da_Perda__c</columns>
        <columns>TW1_Descricao__c</columns>
        <columns>TW1_Local__c</columns>
        <columns>TW1_Objeto__c</columns>
        <columns>TW1_Shopping__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>TW1_Achados_e_Perdidos__c.Perdido</value>
        </filters>
        <label>Perdido</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Achados e Perdidos</pluralLabel>
    <recordTypes>
        <fullName>Achado</fullName>
        <active>true</active>
        <label>Achado</label>
    </recordTypes>
    <recordTypes>
        <fullName>Perdido</fullName>
        <active>true</active>
        <label>Perdido</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>TW1_Solicita_dados_cliente</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(TW1_Status__c) &amp;&amp; TEXT(TW1_Status__c) = &quot;Devolvido&quot; &amp;&amp; (ISBLANK(TW1_Cliente__c) || ISBLANK(TW1_Data_da_Devolucao__c))</errorConditionFormula>
        <errorMessage>Por favor preencha os dados da conta e a data da devolução.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TW1_Solicita_dados_doacao</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(TW1_Status__c) &amp;&amp; ISPICKVAL(TW1_Status__c, &quot;Doado&quot;) &amp;&amp; (ISBLANK(TW1_Empresa_Destino__c) || ISBLANK(TW1_Data_da_Doacao__c))</errorConditionFormula>
        <errorMessage>Caso o status seja alterado para Doado se faz necessário os dados da doação nos campos: Empresa Destino e Data da Doação antes de salvar.</errorMessage>
    </validationRules>
</CustomObject>